Added filter in tasks page and updated format on rest get endpoints